Fix alignment in mobile view
Have added a specific class to override styles that were tricky to
maintain between gov.uk/government/history/past-prime-ministers
and gov.uk/government/history/past-chancellors in mobile view.

--- a/app/assets/stylesheets/frontend/views/_historic-appointments.scss
+++ b/app/assets/stylesheets/frontend/views/_historic-appointments.scss
@@ -1,3 +1,15 @@
+.historic-appointments:not(.historical-past-chancellors) .featured-profiles .year-block {
+  @include media(mobile) {
+    h2.profiles {
+      margin: 0 0 $gutter-one-sixth;
+    }
+
+    .inner {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+}
 .historic-appointments {
   .historic-people-list {
     @include media(tablet) {
@@ -6,7 +18,7 @@
     }
     h3 {
       @include core-19;
-      margin-bottom: $gutter;
+      margin: $gutter 0;
 
       span {
         @include core-80;
